--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #logging.level.org.springframework=debug
 logging.level.com.in28minutes.springboot.myfirstwebapp=info
+spring.mvc.format.date=yyyy-MM-dd
