spring security h2 db configuration

--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.mvc.view.suffix=.jsp
 #logging.level.org.springframework=debug
 logging.level.com.in28minutes.springboot.myfirstwebapp=info
 spring.mvc.format.date=yyyy-MM-dd
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+	spring.jpa.defer-datasource-initialization=true
