--- a/myfirstwebapp/pom.xml
+++ b/myfirstwebapp/pom.xml
@@ -29,11 +29,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+		</dependency>
+
+		<!-- 
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+-->
 		<!-- Apache Tomcat Embed -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
