--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -5,6 +5,15 @@ spring.mvc.view.suffix=.jsp
 logging.level.com.in28minutes.springboot.myfirstwebapp=info
 spring.mvc.format.date=yyyy-MM-dd
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-	spring.jpa.defer-datasource-initialization=true
+#H2 DB and Console
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+
+spring.jpa.defer-datasource-initialization=true
+
+#MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
