--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 #Debug Level Activation
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true;
+spring.jpa.show-sql=true
+
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=social-media-user
+spring.datasource.password=dummypassword
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#Spring Security
+spring.security.user.name=username
+spring.security.user.password=password
