--- a/01-rest-api-starting-code/src/main/resources/application.properties
+++ b/01-rest-api-starting-code/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework=info
+
+#Spring Security
+spring.security.user.name=in28minutes
+spring.security.user.password=dummy
