--- a/01-rest-api-starting-code/src/main/resources/application.properties
+++ b/01-rest-api-starting-code/src/main/resources/application.properties
@@ -4,3 +4,9 @@ logging.level.org.springframework=info
 #spring.security.user.name=in28minutes
 #spring.security.user.password=dummy
 
+
+#H2
+spring.datasource.url=jdbc:h2:mem:testdb
+
+#SQL file olusturduktan sonra bunu girmeliyiz
+spring.jpa.defer-datasource-initialization=true
